overflow bug fixed

--- a/css/footer.css
+++ b/css/footer.css
@@ -6,6 +6,7 @@ Footer Section Start
   transition: all 0.7s linear;
   color: var(--white);
   padding: 9rem 0;
+  overflow: hidden;
 }
 
 .section-footer-links {
