--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,7 @@ Reusable CSS
 .section {
   padding: 9rem 0;
   background-color: var(--white);
+  overflow: hidden;
 }
 
 .section:nth-child(odd) {
